[package]
name = "memkeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nix]
version = "0.27.1"
default-features = false
features = [
    "ptrace", 
    "process",
    "signal"
    # "mman", "fs" # for shared memory
]
